--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <input type="text" name="query" class="input_field">
         <button type="button" class="form_btn">SEARCH</button>
     </div>
+    <div class="content">        
+    </div>
 
     <script src="script.js"></script>
 </body>
