Modified all the files and added loader file.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <input type="text" name="query" class="input_field">
         <button type="button" class="form_btn">SEARCH</button>
     </div>
-    <div class="content">        
+    <div class="content">
+        <div class="result"></div>
+        <div class="loader hidden"><img src="./bouncing-circles.svg" alt="bouncing circles loader"></div>        
     </div>
 
     <script src="script.js"></script>
